set (TARGET "frb_tests")
include(GoogleTest)
file(GLOB TEST_SRC "*.cpp")
file(GLOB SRC "../src/*.cpp")
add_executable(${TARGET} ${TEST_SRC} ${SRC})
target_link_libraries(${TARGET} gtest_main gtest gmock pthread stdc++fs)
target_include_directories(${TARGET} PUBLIC ../include)
install(TARGETS ${TARGET} DESTINATION ${CMAKE_INSTALL_PREFIX})
